--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta property="og:image" content="https://bipinmv.netlify.app/preview.png" />
+  <meta property="og:image" content="https://richard.netlify.app/preview.png" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#091292" />
